; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvg__curveDivs.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvg__curveDivs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (float, float, float)* @nvg__curveDivs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvg__curveDivs(float %0, float %1, float %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  store float %0, float* %4, align 4
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %8 = load float, float* %4, align 4
  %9 = load float, float* %4, align 4
  %10 = load float, float* %6, align 4
  %11 = fadd float %9, %10
  %12 = fdiv float %8, %11
  %13 = call float @acosf(float %12) #3
  %14 = fmul float %13, 2.000000e+00
  store float %14, float* %7, align 4
  %15 = load float, float* %5, align 4
  %16 = load float, float* %7, align 4
  %17 = fdiv float %15, %16
  %18 = call i64 @ceilf(float %17)
  %19 = trunc i64 %18 to i32
  %20 = call i32 @nvg__maxi(i32 2, i32 %19)
  ret i32 %20
}

; Function Attrs: nounwind
declare dso_local float @acosf(float) #1

declare dso_local i32 @nvg__maxi(i32, i32) #2

declare dso_local i64 @ceilf(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
